# VidGen

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  generation_profiles.py  logging.py  model_registry.py  prompt_profiles.py
app/models/: schemas.py
app/services/: adapter_executor.py  artifacts.py  condition_preprocessors.py  condition_router.py  control_plan.py  control_signal_mapper.py  diffusers_loader.py  job_service.py  job_store.py  middleware_consumer.py  prompting.py  provider_stubs.py  reference_images.py  scoring.py  video_pipeline.py
app/tasks/: generate_video.py
app/workers/: celery_app.py
docs/: architecture.md  current-status-and-local-deploy-plan.md  local-demo-checklist.md
scripts/: run_control_regression.py  submit_demo.py  test_local_sdxl_load.py  test_local_svd_load.py
storage/adapters/050e9cbe-e791-4d13-8ca4-1c37316a1847/depth-anything/: step-01-signal-03.json  step-02-signal-03.json  step-03-signal-03.json  step-03-signal-03.npy
storage/adapters/manual-e2e-check/openpose/: step-01-signal-02.json
storage/regression/: control-regression-summary.json  control-regression-summary.md
tests/: test_adapter_executor.py  test_api_models.py  test_condition_router.py  test_control_plan.py  test_control_signal_mapper.py  test_diffusers_loader.py  test_generation_profiles.py  test_health.py  test_job_service.py  test_middleware_consumer.py  test_prompt_profiles.py  test_scoring.py
tests/fixtures/: regression_cases.json
(+46 files in other folders)
